[gd_scene load_steps=46 format=2]

[ext_resource path="res://ocean_overlay.tres" type="Texture" id=1]
[ext_resource path="res://Tiles/Ocean-Floor-1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/PixelMusketeer-vEXO.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Tiles/Ocean-Floor-3.png" type="Texture" id=4]
[ext_resource path="res://Tiles/Ocean-Floor-4.png" type="Texture" id=5]
[ext_resource path="res://Tiles/Ocean-Floor-2.png" type="Texture" id=6]
[ext_resource path="res://Tiles/Ocean-Floor-6.png" type="Texture" id=7]
[ext_resource path="res://Tiles/Ocean-Floor-5.png" type="Texture" id=8]
[ext_resource path="res://Tiles/test_wall.png" type="Texture" id=9]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Lights/Light.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/Plate/PressurePlate.tscn" type="PackedScene" id=12]
[ext_resource path="res://Levels/LightsPlates.gd" type="Script" id=13]
[ext_resource path="res://Tiles/Ocean-Floor-10.png" type="Texture" id=14]
[ext_resource path="res://Levels/Message.gd" type="Script" id=15]
[ext_resource path="res://Assets/Note.tscn" type="PackedScene" id=16]
[ext_resource path="res://Enemy/angler_entrance.png" type="Texture" id=17]
[ext_resource path="res://Assets/Lever/LightLever.tscn" type="PackedScene" id=18]
[ext_resource path="res://Levels/Room0.gd" type="Script" id=19]
[ext_resource path="res://Tiles/Ocean-Floor-12.png" type="Texture" id=20]
[ext_resource path="res://Tiles/Ocean-Floor-11.png" type="Texture" id=21]
[ext_resource path="res://Tiles/Ocean-Floor-8.png" type="Texture" id=22]
[ext_resource path="res://Tiles/Ocean-Floor-13.png" type="Texture" id=23]
[ext_resource path="res://Tiles/Ocean-Floor-9.png" type="Texture" id=24]
[ext_resource path="res://Tiles/Ocean-Floor-7.png" type="Texture" id=25]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 320, 320, 0, 320, 0, 0, 320, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=2]
vertices = PoolVector2Array( 320, 320, 0, 320, 0, 0, 320, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( 320, 320, 0, 320, 0, 0, 320, 0 )

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( 320, 320, 0, 320, 0, 0, 320, 0 )

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( 320, 320, 0, 320, 0, 0, 320, 0 )

[sub_resource type="OccluderPolygon2D" id=6]
polygon = PoolVector2Array( 320, 320, 0, 320, 0, 0, 320, 0 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 320, 320, 0, 320, 0, 0, 320, 0 )

[sub_resource type="NavigationPolygon" id=8]
vertices = PoolVector2Array( 320, 320, 0, 320, 0, 0, 320, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=9]
vertices = PoolVector2Array( 320, 320, 0, 320, 0, 0, 320, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=10]
vertices = PoolVector2Array( 320, 320, 0, 320, 0, 0, 320, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=11]
vertices = PoolVector2Array( 320, 320, 0, 320, 0, 0, 320, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=12]
vertices = PoolVector2Array( 320, 320, 0, 320, 0, 0, 320, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=13]
vertices = PoolVector2Array( 320, 320, 0, 320, 0, 0, 320, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=14]
vertices = PoolVector2Array( 320, 320, 0, 320, 0, 0, 320, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=15]
vertices = PoolVector2Array( 320, 320, 0, 320, 0, 0, 320, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="TileSet" id=16]
0/name = "Ocean-Floor-1.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 320, 320 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/navigation = SubResource( 1 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Ocean-Floor-2.png 1"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 320, 320 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/navigation = SubResource( 2 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Ocean-Floor-3.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 320, 320 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/navigation = SubResource( 8 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Ocean-Floor-4.png 3"
3/texture = ExtResource( 5 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 320, 320 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/navigation = SubResource( 9 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Ocean-Floor-5.png 4"
4/texture = ExtResource( 8 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 320, 320 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/navigation = SubResource( 10 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "Ocean-Floor-6.png 5"
5/texture = ExtResource( 7 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 320, 320 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/navigation = SubResource( 11 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "Ocean-Floor-7.png 6"
6/texture = ExtResource( 25 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 320, 320 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/navigation = SubResource( 12 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "Ocean-Floor-8.png 7"
7/texture = ExtResource( 22 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 320, 320 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/navigation = SubResource( 13 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "Ocean-Floor-9.png 8"
8/texture = ExtResource( 24 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 320, 320 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/navigation = SubResource( 14 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "Ocean-Floor-10.png 9"
9/texture = ExtResource( 14 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 0, 320, 320 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/navigation = SubResource( 15 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "Ocean-Floor-11.png 10"
10/texture = ExtResource( 21 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 0, 0, 320, 320 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/occluder = SubResource( 3 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "Ocean-Floor-12.png 11"
11/texture = ExtResource( 20 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 0, 0, 320, 320 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/occluder = SubResource( 4 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "Ocean-Floor-13.png 12"
12/texture = ExtResource( 23 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 0, 0, 320, 320 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/occluder = SubResource( 5 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "test_wall.png 13"
13/texture = ExtResource( 9 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 0, 0, 320, 320 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/occluder = SubResource( 6 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape = SubResource( 7 )
13/shape_one_way = false
13/shape_one_way_margin = 1.0
13/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
13/z_index = 0

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.729412, 0.6, 0.180392, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color( 0.611765, 0.45098, 0.14902, 0.6 )
shadow_size = 1
shadow_offset = Vector2( 16, 16 )

[sub_resource type="Theme" id=18]
Panel/styles/panel = SubResource( 17 )

[sub_resource type="DynamicFont" id=19]
size = 52
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="TileSet" id=20]
0/name = "ocean_overlay.tres 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 256, 256 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="Room0" type="Node2D"]
script = ExtResource( 19 )
__meta__ = {
"_edit_lock_": true
}

[node name="LightsOff" type="CanvasModulate" parent="."]
visible = false
color = Color( 0.0235294, 0.0313726, 0.027451, 1 )

[node name="LevelNavigation" type="Navigation2D" parent="." groups=[
"LevelNavigation",
]]

[node name="TileFloor" type="TileMap" parent="LevelNavigation"]
tile_set = SubResource( 16 )
cell_size = Vector2( 320, 320 )
format = 1
tile_data = PoolIntArray( -1, 13, 0, -65536, 13, 0, -65535, 13, 0, -65534, 13, 0, -65533, 13, 0, 65535, 13, 0, 0, 9, 0, 1, 12, 0, 2, 10, 0, 3, 13, 0, 131071, 13, 0, 65536, 1, 0, 65537, 0, 0, 65538, 2, 0, 65539, 13, 0, 196607, 13, 0, 131072, 1, 0, 131073, 0, 0, 131074, 2, 0, 131075, 13, 0, 262143, 13, 0, 196608, 1, 0, 196609, 0, 0, 196610, 2, 0, 196611, 13, 0, 327679, 13, 0, 262144, 1, 0, 262145, 0, 0, 262146, 2, 0, 262147, 13, 0, 393215, 13, 0, 327680, 1, 0, 327681, 0, 0, 327682, 2, 0, 327683, 13, 0, 458751, 13, 0, 393216, 1, 0, 393217, 0, 0, 393218, 2, 0, 393219, 13, 0, 524287, 13, 0, 458752, 1, 0, 458753, 0, 0, 458754, 2, 0, 458755, 13, 0, 589823, 13, 0, 524288, 1, 0, 524289, 0, 0, 524290, 2, 0, 524291, 13, 0, 655359, 13, 0, 589824, 1, 0, 589825, 0, 0, 589826, 2, 0, 589827, 13, 0, 720895, 13, 0, 655360, 1, 0, 655361, 0, 0, 655362, 2, 0, 655363, 13, 0, 786431, 13, 0, 720896, 3, 0, 720897, 11, 0, 720898, 4, 0, 720899, 13, 0, 851967, 13, 0, 786432, 13, 0, 786433, 13, 0, 786434, 13, 0, 786435, 13, 0 )

[node name="LightsPlates" type="Node2D" parent="."]
script = ExtResource( 13 )

[node name="Plates" type="Node2D" parent="LightsPlates"]

[node name="PressurePlate" parent="LightsPlates/Plates" instance=ExtResource( 12 )]
position = Vector2( 372.285, 2195.67 )

[node name="Timer1" type="Timer" parent="LightsPlates"]
one_shot = true

[node name="Timer2" type="Timer" parent="LightsPlates"]
one_shot = true

[node name="Timer3" type="Timer" parent="LightsPlates"]
one_shot = true

[node name="Timer4" type="Timer" parent="LightsPlates"]
one_shot = true

[node name="Lights1" type="Node2D" parent="LightsPlates"]
visible = false

[node name="Light11" parent="LightsPlates/Lights1" instance=ExtResource( 11 )]
position = Vector2( 0, 2048 )

[node name="Light12" parent="LightsPlates/Lights1" instance=ExtResource( 11 )]
position = Vector2( 768, 2048 )

[node name="Lights2" type="Node2D" parent="LightsPlates"]
visible = false

[node name="Light21" parent="LightsPlates/Lights2" instance=ExtResource( 11 )]
position = Vector2( 0, 1536 )

[node name="Light22" parent="LightsPlates/Lights2" instance=ExtResource( 11 )]
position = Vector2( 768, 1536 )

[node name="Lights3" type="Node2D" parent="LightsPlates"]
visible = false

[node name="Light31" parent="LightsPlates/Lights3" instance=ExtResource( 11 )]
position = Vector2( 0, 1024 )

[node name="Light32" parent="LightsPlates/Lights3" instance=ExtResource( 11 )]
position = Vector2( 768, 1048 )

[node name="Lights4" type="Node2D" parent="LightsPlates"]
visible = false

[node name="Light41" parent="LightsPlates/Lights4" instance=ExtResource( 11 )]
position = Vector2( 0, 512 )

[node name="Light42" parent="LightsPlates/Lights4" instance=ExtResource( 11 )]
position = Vector2( 768, 512 )

[node name="Player" parent="." instance=ExtResource( 10 )]
position = Vector2( 384, 2816 )
player_speed = 600

[node name="PlayerCamera" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 2, 2 )
limit_left = -100000
limit_top = 0
limit_right = 100000
limit_bottom = 3072
__meta__ = {
"_edit_lock_": true
}

[node name="Message" type="CanvasLayer" parent="."]
script = ExtResource( 15 )

[node name="Panel" type="Panel" parent="Message"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -304.0
margin_right = 256.0
margin_bottom = 304.0
theme = SubResource( 18 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Message/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.0
margin_top = -273.0
margin_right = 219.0
margin_bottom = 273.0
custom_fonts/font = SubResource( 19 )
custom_colors/font_color = Color( 0.34902, 0.231373, 0.0862745, 1 )
text = "The STARS guide the way...

The LIGHT shall banish the BEAST...

The KEY will set you free."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Note" parent="." instance=ExtResource( 16 )]
position = Vector2( 387.209, 2566.3 )

[node name="angler_entrance" type="Sprite" parent="."]
position = Vector2( 385.011, 252.243 )
texture = ExtResource( 17 )

[node name="LightLever" parent="." instance=ExtResource( 18 )]
position = Vector2( 360.451, 999.845 )
rotation = -1.5708

[node name="OceanOverlay" type="TileMap" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
tile_set = SubResource( 20 )
cell_size = Vector2( 256, 256 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262158, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0 )
[connection signal="plate_press" from="LightsPlates/Plates/PressurePlate" to="LightsPlates" method="_on_PressurePlate_plate_press"]
[connection signal="timeout" from="LightsPlates/Timer1" to="LightsPlates" method="_on_Timer1_timeout"]
[connection signal="timeout" from="LightsPlates/Timer2" to="LightsPlates" method="_on_Timer2_timeout"]
[connection signal="timeout" from="LightsPlates/Timer3" to="LightsPlates" method="_on_Timer3_timeout"]
[connection signal="timeout" from="LightsPlates/Timer4" to="LightsPlates" method="_on_Timer4_timeout"]
[connection signal="note_clear" from="Message" to="Note" method="_on_Message_note_clear"]
[connection signal="note_collected" from="Note" to="Message" method="_on_Note_note_collected"]
[connection signal="lever_on" from="LightLever" to="." method="_on_LightLever_lever_on"]
